# AI-RSS

./: .gitignore  AGENTS.md  DESIGN.md  README.md  dev.sh  docker-compose.yml  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: ship.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AnimatedPage.tsx  EmptyState.tsx  FeedCard.tsx  Header.tsx  ItemCard.tsx  Layout.tsx  LoadingSkeleton.tsx  MobileSidebar.tsx  ReaderCard.tsx  Sidebar.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  FeedDetail.tsx  Feeds.tsx  FilterView.tsx  JoinTeam.tsx  Login.tsx  ReaderView.tsx  Register.tsx  TeamDetail.tsx  Teams.tsx  UrlAnalyzer.tsx
frontend/src/store/: authStore.ts  readerStore.ts  themeStore.ts
frontend/src/types/: index.ts
scripts/: seed_feeds.py  sync_feeds.py  test_rss_feeds.py
src/: __init__.py  config.py  main.py
src/api/: router.py
src/api/endpoints/: __init__.py  agents.py  auth.py  chat.py  feeds.py  items.py  teams.py
src/core/: database.py  security.py
src/models/: __init__.py  chat.py  feed.py  item.py  team.py  user.py
src/services/: ai_agent.py  ai_processor.py  browser_service.py  feed_parser.py  scraper.py
src/static/: index.html
src/tasks/: worker.py
tests/: test_agents.py
