[project]
name = "workdir"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.15.0",
    "email-validator>=2.3.0",
    "fastapi>=0.137.2",
    "feedparser>=6.0.12",
    "google-genai>=2.9.0",
    "greenlet>=3.0.0",
    "httpx>=0.28.1",
    "anthropic>=0.40.0",
    "openai>=2.43.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pytest>=9.1.0",
    "python-multipart>=0.0.32",
    "redis>=5.3.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
